# GRA4157-big-data-final-proj

./: .gitignore  README.md  bootleg_aah_cnn_classifier.py  cifar10_experiments.py  cifar10_experiments_notebook.ipynb  cnn_classifier.py  flexible_cnn_classifier.py  pyproject.toml  simple_cnn_classifier.py
report/: report.aux  report.bbl  report.blg  report.fdb_latexmk  report.fls  report.out  report.tex  report.toc  sources.bib
report/figures/: results_table.txt  width_sweep_results.txt
results/epoch_wise/: baseline_epochs_2000_results.pkl  baseline_epochs_30000_results.pkl  baseline_epochs_400_results.pkl  baseline_epochwise_checkpoint.pkl
results/model_wise/: all_results.pkl  baseline_checkpoint.pkl  extreme_checkpoint.pkl  high_checkpoint.pkl  medium_checkpoint.pkl  very_high_checkpoint.pkl
results/width_sweep/: all_results.pkl  width_10_checkpoint.pkl  width_128_checkpoint.pkl  width_12_checkpoint.pkl  width_14_checkpoint.pkl  width_16_checkpoint.pkl  width_18_checkpoint.pkl  width_1_checkpoint.pkl  width_20_checkpoint.pkl  width_24_checkpoint.pkl  width_2_checkpoint.pkl  width_32_checkpoint.pkl  width_3_checkpoint.pkl  width_40_checkpoint.pkl  width_48_checkpoint.pkl  width_4_checkpoint.pkl  width_5_checkpoint.pkl  width_64_checkpoint.pkl  width_6_checkpoint.pkl  width_7_checkpoint.pkl  width_80_checkpoint.pkl  width_8_checkpoint.pkl  width_96_checkpoint.pkl  width_9_checkpoint.pkl
