[project]
name = "gra4157-big-data-final-proj"
version = "0.1.0"
description = "CIFAR-10 Double Descent Experiments - GRA4157 Big Data Final Project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "pandas>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Note: For CUDA support, you may need to configure PyTorch with CUDA:
# uv pip install torch torchvision --index-url https://download.pytorch.org/whl/cu118

